--- a/readme.me
+++ b/readme.me
@@ -3,3 +3,60 @@
 https://sale.jd.com/act/ef2BNhPzgmHKDFy.html
 个护49-48
 https://sale.jd.com/act/m1N7LbwkOsKoiuY.html
+
+
+13个签到中心
+翻牌领豆 http://jd.cn.hn/z2a
+领钢镚 http://jd.cn.hn/z2b
+会员签到 http://jd.cn.hn/z2e
+白条签到 http://jd.cn.hn/z2h
+小金库抽奖 http://jd.cn.hn/z2j
+京友邦签到 http://jd.cn.hn/z2k
+白条提额 http://jd.cn.hn/z2m
+天天领流量 http://jd.cn.hn/z2n
+每天领支付立减券 https://pa.jd.com/lottery/lotteryPage 
+
+11个领券中心
+好券集市 http://jd.cn.hn/6f
+触屏领券中心 http://jd.cn.hn/z2r
+每日精选 http://jd.cn.hn/jpd
+微信领券中心 http://jd.cn.hn/z2s
+手Q领券中心 http://jd.cn.hn/z2t
+勋章优惠券 http://jd.cn.hn/z2u
+金融领券中心 http://jd.cn.hn/z2v
+领白条券 http://jd.cn.hn/2kj
+小白信用券 http://jd.cn.hn/2kn
+福利社领券 http://jd.cn.hn/2kp
+京东秒杀 http://jd.cn.hn/3Ge
+
+
+https://u.jd.com/J8dZax 天天领30-2支付券
+
+https://u.jd.com/QSPOhM 天天领10-1支付券
+
+https://u.jd.com/SesAho 100-99支付神券
+
+https://u.jd.com/tHdJ3i 199-100支付神券
+
+https://u.jd.com/vYWC7I 单单领京豆
+
+https://u.jd.com/TyX0J7 神券日大额券
+
+
+https://u.jd.com/WVVlXp 家电券
+https://u.jd.com/G5I4dR 内衣199-100
+https://u.jd.com/wN5Aav 服饰599-300
+https://u.jd.com/KOXgWJ 手机4980-1111
+https://u.jd.com/RjKuen 宠物五折券
+https://u.jd.com/nmtd81 新全品神券速领
+https://u.jd.com/xPRn1R 清洁199-105
+https://u.jd.com/2Vkewg 新话费券
+https://u.jd.com/hdkM3m 家居神券
+https://u.jd.com/tQnFZS 全品108-8
+https://u.jd.com/KIRhhp 白条49-5
+https://u.jd.com/xFuiVk 全品和支付券
+https://u.jd.com/jsZpNJ 食品饮料299-200
+https://u.jd.com/nUGKbQ 全品200-15
+https://u.jd.com/8pEUlU 食用油99-88
+https://u.jd.com/1nxSWl 拉杆箱七折券
+
